made some changes, dunno what exactly

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,18 @@
-# This is the general Makefile that handles all source files of the project #
+#############################################################################
+# Compilation Options:																	#
+# 	  Command					Action										#
+# ------------------------------------------------------------------------- #
+# >> make all	  	=> all source files and creates all executables			#
+# >> make myprime 	=> myprime and its dependencies							#
+# >> make Inode		=> Inode and its dependencies							#
+# >> make prime1	=> only prime1											#
+# >> make prime2	=> only prime2											#
+# >> make clean		=> removes all object and all executable files			#
+#############################################################################
 
 IDIR =../include
 ODIR = ../obj
-WDIR = ./Workers
-INNERDIR = ./InnerNodes
+BDIR = ../bin
 CC = gcc
 CFLAGS = -ggdb -Wall -I$(IDIR)
 
@@ -11,26 +20,28 @@ CFLAGS = -ggdb -Wall -I$(IDIR)
 _DEPS = subrange.h
 DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
 
-_OBJ = main.o subrange.o
-OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
-
 $(ODIR)/%.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-all: utilities myprime
+all: Inode prime1 prime2 mytiming myprime
 
-utilities:
-	$(MAKE) -C $(WDIR)
-	$(MAKE) -C $(INNERDIR)
+Inode: $(ODIR)/Inode.o $(ODIR)/subrange.o
+	$(CC) -o $(BDIR)/$@ $^ $(CFLAGS)
 
+prime1: $(ODIR)/prime1.o
+	$(CC) -o $(BDIR)/$@ $^ $(CFLAGS)
 
-myprime: $(OBJ)
-	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
+prime2: $(ODIR)/prime2.o
+	$(CC) -o $(BDIR)/$@ $^ $(CFLAGS) -lm
+
+mytiming: $(ODIR)/mytiming.o
+	$(CC) -o $(BDIR)/$@ $^ $(CFLAGS)
+
+myprime: $(ODIR)/myprime.o $(ODIR)/subrange.o
+	$(CC) -o $(BDIR)/$@ $^ $(CFLAGS)
 
 .PHONY: clean
 
 clean:
-	rm -f $(ODIR)/*.o *~ core $(INCDIR)/*~ 
-	rm -f myprime
-	cd $(WDIR); make clean
-	cd $(INNERDIR); make clean
+	rm -f $(ODIR)/*.o *~ core $(INCDIR)/*~ $(BDIR)/*
+	rm -f myprime Inode prime1 prime2 mytiming
