--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 #############################################################################
-# Compilation Options:																	#
+# Compilation Options:														#
 # 	  Command					Action										#
 # ------------------------------------------------------------------------- #
 # >> make all	  	=> all source files and creates all executables			#
@@ -7,12 +7,13 @@
 # >> make Inode		=> Inode and its dependencies							#
 # >> make prime1	=> only prime1											#
 # >> make prime2	=> only prime2											#
+# >> make prime3	=> only prime3											#
 # >> make clean		=> removes all object and all executable files			#
 #############################################################################
 
-IDIR =../include/
-ODIR = ../obj/
-BDIR = ../bin/
+IDIR = ../include
+ODIR = ../obj
+BDIR = ../bin
 CC = gcc
 CFLAGS = -ggdb -Wall -I$(IDIR)
 
@@ -47,4 +48,3 @@ myprime: $(ODIR)/myprime.o $(ODIR)/subrange.o
 
 clean:
 	rm -f $(ODIR)/*.o *~ core $(INCDIR)/*~ $(BDIR)/*
-	rm -f myprime Inode prime1 prime2 mytiming
